--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -73,7 +73,7 @@
           <div class="x_content">
             <div class="row">
               <div class="col-sm-12">
-                <div class="temperature"><b>Monday</b>, 07:30 AM<br><br>
+                <div id="main-weather-day" class="temperature" style="font-size: 14pt"><b>Monday</b><br><br>
                 </div>
               </div>
             </div>
@@ -81,7 +81,7 @@
               <div class="col-sm-4">
                 <div class="weather-icon">
                   <span>
-                                      <canvas height="78" width="78" id="partly-cloudy-day"></canvas>
+                                      <canvas height="85" width="85" id="main-weather-icon"></canvas>
                                   </span>
 
                 </div>
@@ -89,14 +89,14 @@
               <div class="col-sm-8">
                 <div class="weather-text">
                   <h2  style="font-size: 14pt">Oakland
-                                      <br><i>Partly Cloudy Day</i>
+                                      <br><span id="main-day-weather"><i>Partly Cloudy Day</i></span>
                                   </h2>
                 </div>
               </div>
             </div>
             <div class="col-sm-12">
               <div class="weather-text pull-right">
-                <h3 class="degrees">23</h3>
+                <h3 id="main-day-high" class="degrees">23</h3>
               </div>
             </div>
             <div class="clearfix"></div>
@@ -105,65 +105,65 @@
             <div class="row weather-days">
               <div class="col-sm-2">
                 <div class="daily-weather">
-                  <h2 class="day">Mon</h2>
-                  <h3 class="degrees">25</h3>
+                  <h2 id="weather-day1" class="day">Mon</h2>
+                  <h3 id="day1-high" class="degrees">25</h3>
                   <span>
-                  <canvas id="clear-day" width="32" height="32">
+                  <canvas id="icon-day1" width="32" height="32">
                                           </canvas>
 
                                   </span>
-                  <h5>15
-                                      <i>km/h</i>
+                  <h5 id="clcov-day1">15
+                                      <i>ClCov</i>
                                   </h5>
                 </div>
               </div>
               <div class="col-sm-2">
                 <div class="daily-weather">
-                  <h2 class="day">Tue</h2>
+                  <h2 id="day2-high" id="weather-day2" class="day">Tue</h2>
                   <h3 class="degrees">25</h3>
-                  <canvas height="32" width="32" id="rain"></canvas>
-                  <h5>12
-                                      <i>km/h</i>
+                  <canvas id="icon-day2" height="32" width="32"></canvas>
+                  <h5 id="clcov-day2">12
+                                      <i>ClCov</i>
                                   </h5>
                 </div>
               </div>
               <div class="col-sm-2">
                 <div class="daily-weather">
-                  <h2 class="day">Wed</h2>
-                  <h3 class="degrees">27</h3>
-                  <canvas height="32" width="32" id="snow"></canvas>
-                  <h5>14
-                                      <i>km/h</i>
+                  <h2 id="weather-day3" class="day">Wed</h2>
+                  <h3 id="day3-high" class="degrees">27</h3>
+                  <canvas id="icon-day3" height="32" width="32"></canvas>
+                  <h5 id="clcov-day3">14
+                                      <i>ClCov</i>
                                   </h5>
                 </div>
               </div>
               <div class="col-sm-2">
                 <div class="daily-weather">
-                  <h2 class="day">Thu</h2>
-                  <h3 class="degrees">28</h3>
-                  <canvas height="32" width="32" id="sleet"></canvas>
-                  <h5>15
-                                      <i>km/h</i>
+                  <h2 id=weather-day4" class="day">Thu</h2>
+                  <h3 id="day4-high" class="degrees">28</h3>
+                  <canvas id="icon-day4" height="32" width="32""></canvas>
+                  <h5 id="clcov-day4">15
+                                      <i>ClCov</i>
                                   </h5>
                 </div>
               </div>
               <div class="col-sm-2">
                 <div class="daily-weather">
-                  <h2 class="day">Fri</h2>
-                  <h3 class="degrees">28</h3>
-                  <canvas height="32" width="32" id="wind"></canvas>
-                  <h5>11
-                                      <i>km/h</i>
+                  <h2 id="weather-day5" class="day">Fri</h2>
+                  <h3 id="day5-high" class="degrees">28</h3>
+                  <canvas id="icon-day5" height="32" width="32"></canvas>
+                  <h5 id="clcov-day5">11
+                                      <i>ClCov</i>
                                   </h5>
                 </div>
               </div>
               <div class="col-sm-2">
                 <div class="daily-weather">
-                  <h2 class="day">Sat</h2>
-                  <h3 class="degrees">26</h3>
-                  <canvas height="32" width="32" id="cloudy"></canvas>
-                  <h5>10
-                                      <i>km/h</i>
+                  <h2 id="weather-day6" class="day">Sat</h2>
+                  <h3 id="day6-high" class="degrees">26</h3>
+                  <canvas id="icon-day6" height="32" width="32"></canvas>
+                  <h5 id="clcov-day6">10
+                                      <i>ClCov</i>
                                   </h5>
                 </div>
               </div>
@@ -176,7 +176,6 @@
       <!-- end of weather widget -->
 
       <!-- beginning cloudcover chart -->
-      <!-- <div class="row"> -->
         <div class="col-md-4 col-sm-6 col-xs-12">
           <div class="x_panel">
             <div class="x_title">
@@ -257,4 +256,5 @@
 {% block javascripts %}
   {{ super()}}
 {% endblock javascripts %}
+
 
