--- a/templates/site_template/footer.html
+++ b/templates/site_template/footer.html
@@ -1,4 +1,4 @@
 <div class="pull-right">
-  SIMPLTON - Based on Gentelella Alela Template by <a href="https://colorlib.com/wp/free-bootstrap-admin-dashboard-templates/">Colorlib</a>
+  CSS Styling Borrowed from Gentelella Alela Template by <a href="https://colorlib.com/wp/free-bootstrap-admin-dashboard-templates/">Colorlib</a>
 </div>
 <div class="clearfix"></div>
