--- a/templates/base_site.html
+++ b/templates/base_site.html
@@ -2,16 +2,15 @@
 <html lang="en">
   <head>
     {% block head %}
+    <!-- Meta, title, CSS, favicons, etc. -->
       {% block meta %}
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <!-- Meta, title, CSS, favicons, etc. -->
         <link rel="shortcut icon" href="#" />
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
       {% endblock meta %}
 
-      <title>{% block title %}My Solar Data{% endblock %}</title>
+      <title>{% block title %}My Sunstats{% endblock %}</title>
 
       {% block stylesheets %}
         <!-- Bootstrap -->
@@ -22,19 +21,15 @@
         <link href="{{ url_for('static', filename='vendors/nprogress/nprogress.css') }}" rel="stylesheet">
         <!-- bootstrap-daterangepicker -->
         <link href="{{ url_for('static', filename='vendors/bootstrap-daterangepicker/daterangepicker.css') }}" rel="stylesheet">
-        <!-- iCheck -->
-        <link href="{{ url_for('static', filename='vendors/iCheck/skins/flat/green.css') }}" rel="stylesheet">
         <!-- bootstrap-progressbar -->
         <link href="{{ url_for('static', filename='vendors/bootstrap-progressbar/css/bootstrap-progressbar-3.3.4.min.css') }}" rel="stylesheet">
-        <!-- JQVMap -->
-        <link href="{{ url_for('static', filename='vendors/jqvmap/dist/jqvmap.min.css') }}" rel="stylesheet"/>
       {% endblock stylesheets %}
       <!-- Custom Theme Style -->
       <link href="{{ url_for('static', filename='build/css/custom.css') }}" rel="stylesheet">
     {% endblock head %}
   </head>
 
-  <body class="{% block body_class %}nav-md {% endblock body_class %}">
+  <body class="{% block body_class %} nav-md {% endblock body_class %}">
     {% block body %}
       <div class="container body">
         <div class="main_container">
@@ -68,14 +63,10 @@
         <script src="{{ url_for('static', filename='vendors/jquery/dist/jquery.min.js') }}"></script>
         <!-- Bootstrap -->
         <script src="{{ url_for('static', filename='vendors/bootstrap/dist/js/bootstrap.min.js') }}"></script>
-        <!-- FastClick -->
-        <script src="{{ url_for('static', filename='vendors/fastclick/lib/fastclick.js') }}"></script>
         <!-- NProgress -->
         <script src="{{ url_for('static', filename='vendors/nprogress/nprogress.js') }}"></script>
         <!-- bootstrap-progressbar -->
         <script src="{{ url_for('static', filename='vendors/bootstrap-progressbar/bootstrap-progressbar.min.js') }}"></script>
-        <!-- iCheck -->
-        <script src="{{ url_for('static', filename='vendors/iCheck/icheck.min.js') }}"></script>
         <!-- bootstrap-daterangepicker -->
         <script src="{{ url_for('static', filename='vendors/moment/min/moment.min.js') }}"></script>
         <script src="{{ url_for('static', filename='vendors/bootstrap-daterangepicker/daterangepicker.js') }}"></script>
@@ -83,18 +74,8 @@
         <script src="{{ url_for('static', filename='vendors/bootstrap-wysiwyg/js/bootstrap-wysiwyg.min.js') }}"></script>
         <script src="{{ url_for('static', filename='vendors/jquery.hotkeys/jquery.hotkeys.js') }}"></script>
         <script src="{{ url_for('static', filename='vendors/google-code-prettify/src/prettify.js') }}"></script>
-        <!-- jQuery Tags Input -->
-        <script src="{{ url_for('static', filename='vendors/jquery.tagsinput/src/jquery.tagsinput.js') }}"></script>
-        <!-- Switchery -->
-        <script src="{{ url_for('static', filename='vendors/switchery/dist/switchery.min.js') }}"></script>
-        <!-- Select2 -->
-        <script src="{{ url_for('static', filename='vendors/select2/dist/js/select2.full.min.js') }}"></script>
         <!-- Autosize -->
         <script src="{{ url_for('static', filename='vendors/autosize/dist/autosize.min.js') }}"></script>
-        <!-- jQuery autocomplete -->
-        <script src="{{ url_for('static', filename='vendors/devbridge-autocomplete/dist/jquery.autocomplete.min.js') }}"></script>
-        <!-- starrr -->
-        <script src="{{ url_for('static', filename='vendors/starrr/dist/starrr.js') }}"></script>
         <!-- Chart.js -->
         <script src="{{ url_for('static', filename='vendors/Chart.js/dist/Chart.min.js') }}"></script>
         <!-- gauge.js -->
@@ -109,6 +90,8 @@
         <script src="{{ url_for('static', filename='build/js/kwh_data.js') }}"></script>
         <script src="{{ url_for('static', filename='build/js/weather_widget.js') }}"></script>
         <script src="{{ url_for('static', filename='build/js/solar_path.js') }}"></script>
+        <script src="{{ url_for('static', filename='build/js/cloudcover_today.js') }}"></script>
+        <script src="{{ url_for('static', filename='build/js/time_button_listeners.js') }}"></script>
     {% endblock body %}
   </body>
 </html>
