Continued breaking up code into smaller functions; moved repetitive blocks of code residing on server to helper functions file; finally, began to build out functions to make it possible to display comparative data from prior year

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -79,7 +79,7 @@
               <div class="clearfix"></div>
             </div>
             <div class="x_content">
-              <canvas id="cloudCoverChart"></canvas>
+              <canvas id="cloud-cover-chart"></canvas>
             </div>
           </div>
         </div>
