Fixed chart-updating functions for displaying cloudcover percentages for single-day intervals; began writing tests

--- a/templates/base_site.html
+++ b/templates/base_site.html
@@ -86,12 +86,12 @@
         <script src="{{ url_for('static', filename='vendors/DateJS/build/date.js') }}"></script>
         <!-- Custom Scripts -->
         <script src="{{ url_for('static', filename='build/js/custom.js') }}"></script>
-        <script src="{{ url_for('static', filename='build/js/time_button_listeners.js') }}"></script>        
-        <script src="{{ url_for('static', filename='build/js/kwh_data.js') }}"></script>
-        <script src="{{ url_for('static', filename='build/js/weather_widget.js') }}"></script>
+        <script src="{{ url_for('static', filename='build/js/timeButtonListeners.js') }}"></script>        
+        <script src="{{ url_for('static', filename='build/js/kwhData.js') }}"></script>
+        <script src="{{ url_for('static', filename='build/js/weatherWidget.js') }}"></script>
         <script src="{{ url_for('static', filename='build/js/daylight.js') }}"></script>
-        <script src="{{ url_for('static', filename='build/js/solar_arc.js') }}"></script>
-        <script src="{{ url_for('static', filename='build/js/cloudcover_today.js') }}"></script>
+        <script src="{{ url_for('static', filename='build/js/solarArc.js') }}"></script>
+        <script src="{{ url_for('static', filename='build/js/cloudcoverToday.js') }}"></script>
       {% endblock %}
     {% endblock body %}
   </body>
