--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -18,7 +18,7 @@
               <div class="clearfix"></div>
             </div>
             <div class="x_content">
-              <canvas id="kWhBarChart"></canvas>
+              <canvas id="kWh-bar-chart"></canvas>
             </div>
           </div>
         </div>
